# VoleMachineSim

./: ALU.cpp  CMakeLists.txt  CPU.cpp  Main.cpp  README.md  ReadMe.txt  Register.cpp  VoleMachineSim.h
MratShamshoonGUI/: .gitignore  ALU.cpp  CMakeLists.txt  CPU.cpp  CU.cpp  Machine.cpp  Memory.cpp  Register.cpp  Resources.qrc  VoleMachine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Src/: ALU.cpp  CMakeLists.txt  CPU.cpp  CU.cpp  Machine.cpp  MainUI.cpp  Memory.cpp  Register.cpp  Resources.qrc  VoleMachineSim.h  mainwindow.h
